Refactored to move commonly used closeStatement and closeResultSet into SQLUtilities.  Also, fixed items noted by findbugs.